MVP is finally complete. I finally figured out the image issue. Onwards to some stretch for the last hour and half.

--- a/css/index.css
+++ b/css/index.css
@@ -223,8 +223,24 @@ footer {
   height: 100%;
 }
 @media (max-width: 500px) {
-  .home .space-images img img {
+  .home .space-images img {
     width: 100%;
+  }
+}
+.home .space-images img.sky {
+  display: visible;
+}
+@media (max-width: 500px) {
+  .home .space-images img.sky {
+    display: none;
+  }
+}
+.home .space-images img.launch {
+  display: visible;
+}
+@media (max-width: 500px) {
+  .home .space-images img.launch {
+    display: none;
   }
 }
 .home .visit-planets {
@@ -281,6 +297,19 @@ footer {
 }
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
+    width: 100%;
+    height: 80px;
+    margin-bottom: 20px;
+  }
+}
+.home .walk .walk-text .btn:hover {
+  cursor: pointer;
+  transform: scale(1.09);
+  background-color: white;
+  color: #22283A;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn:hover {
     width: 100%;
     height: 80px;
     margin-bottom: 20px;
