--- a/less/home-page.less
+++ b/less/home-page.less
@@ -34,10 +34,24 @@
       height: 100%;
 
       @media @phone {
-        img {
-          width: 100%;
-        }
-      } 
+        width: 100%;
+      }
+    }
+
+    img.sky {
+      display: visible;
+
+      @media @phone {
+        display: none;
+      }
+    }
+
+    img.launch {
+      display: visible;
+
+      @media @phone {
+        display: none;
+      }
     }
   }
 
@@ -83,6 +97,19 @@
 
       .btn {
         .buttonStyles();
+        
+        @media @phone {
+          width: 100%;
+          height: 80px;
+          margin-bottom: 20px;
+        }
+      }
+
+      .btn:hover {
+        cursor: pointer;
+        transform: scale(1.09);
+        background-color: white;
+        color: @btn-bg-color;
         
         @media @phone {
           width: 100%;
